# omnicovas

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLA.md  CLAUDE.MD  CONTRIBUTING.md  GEMINI.md  OmniCOVAS_Approval_Applications_v4.0.txt  OmniCOVAS_Compliance_Matrix_v4_1.txt  OmniCOVAS_Index.md  OmniCOVAS_Master_Blueprint_v4.0.txt  OmniCOVAS_Master_Blueprint_v4_1.txt  OmniCOVAS_Phase2_Development_Guide.docx  OmniCOVAS_Roadmap_v4_1.txt  README.md  SECURITY.md  alembic.ini  package-lock.json  package.json  phase 2 dev guide.txt  phase_3_dev_guide.txt  pyproject.toml  resource_budget.yaml  vitest.config.js
.claude/: settings.local.json
.continue/agents/: Qwen.yaml
.gemini/: settings.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 550b8eac852b_initial_schema.py
docs/accessibility/: nvda_smoke_test.md
docs/ai/: Soldier.md
docs/archive/: OmniCOVAS_Phase1_Development_Guide.docx  PB-04_w8a_step2_module_health.md  PB-05_w8a_step3_cargo.md  PB-07_w9_step2_critical_broadcaster.md  PB-11_w9_step6_latency_and_wiring.md  README.md  phase_3_dev_guide.txt
docs/decisions/: 0002-tauri-plugins.md  0003-ui-safe-rendering.md
docs/internal/: README.md  Repository_Map.md
docs/perf/: phase3_live_playtest_baseline.md
docs/releases/: pb05_ui_overhaul.md  phase2.md  phase3.md  phase3_1.md  phase3_4_repair_findings.md  phase3_safe_rendering_hotfix.md  phase4.md  rust_dependency_security_updates.md  week12_complete.md  week13_complete.md
docs/security/: rust_dependency_alerts_triage.md
docs/testing/: pb05_accessibility_smoke.md  pb05_ui_overhaul_manual_test.md  phase3_live_playtest_evidence_template.md  phase3_live_tauri_dashboard_playtest.md  week12_overlay_manual_test.md
omnicovas/ai/: factory.py  gemini_provider.py  null_provider.py  provider.py
omnicovas/api/: __init__.py  pillar1.py  week13.py
omnicovas/config/: vault.py
omnicovas/core/: activity_log.py  api_bridge.py  broadcaster.py  confirmation_gate.py  dispatcher.py  event_types.py  handlers.py  journal_watcher.py  latency.py  logging_config.py  main.py  resource_monitor.py  state_manager.py  status_reader.py
omnicovas/db/: engine.py  models.py  recorder.py
omnicovas/features/: __init__.py  cargo.py  extended_events.py  fuel.py  heat_management.py  hull_triggers.py  loadout.py  module_health.py  power_distribution.py  rebuy.py  ship_state.py
omnicovas/knowledge_base/: __init__.py  _metadata.json  api_limits.yaml  bgs_mechanics.json  combat_mechanics.json  engineering_materials.json  exobiology_mechanics.json  exploration_mechanics.json  loader.py  odyssey_mechanics.json  powerplay2_mechanics.json  trading_mechanics.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: overlay-events.json
src-tauri/src/: lib.rs  main.rs  overlay.rs
tests/: test_ai_providers.py  test_api_pillar1.py  test_broadcaster.py  test_cargo.py  test_config_vault.py  test_confirmation_gate.py  test_critical_broadcaster.py  test_dispatcher.py  test_extended_broadcaster.py  test_fuel.py  test_heat_management.py  test_hull_triggers.py  test_journal_watcher.py  test_knowledge_base.py  test_latency_budgets.py  test_live_ship_state.py  test_loadout_awareness.py  test_logging_and_resources.py  test_migrations.py  test_module_health.py  test_overlay_integration.py  test_phase2_integration.py  test_placeholder.py  test_power_distribution.py  test_rebuy.py  test_recorder.py  test_state_contract.py  test_state_manager.py  test_status_reader.py  test_tauri_autoconnect_bridge.py  test_tauri_cargo_contract.py  test_tauri_config_contract.py  test_ui_shell_autoconnect_contract.py  test_week13_endpoints.py
ui/: index.html  overlay.html  overlay.js
ui/styles/: forms.css  (+20 more)
(+155 files in other folders)
