[project]
name = "omnicovas"
version = "0.1.0"
description = "Intelligence suite for Elite Dangerous commanders."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "RocketsProjects" }
]
keywords = ["elite-dangerous", "telemetry", "intelligence", "gaming"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "google-genai>=1.73.1",
    "sqlalchemy>=2.0.49",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omnicovas"]

# ----------------------------------------------------------------------------
# ruff — linter and formatter
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["alembic/versions", "alembic/env.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----------------------------------------------------------------------------
# mypy — type checker (strict mode)
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

# ----------------------------------------------------------------------------
# pytest — testing framework
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-stub>=1.1.0",
    "ruff>=0.15.11",
    "sqlalchemy[mypy]>=2.0.49",
]

[[tool.mypy.overrides]]
module = "watchdog.*"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true
